<resources>

    <string name="app_name">Asteroid Radar</string>
    <string name="text_back_button">Back</string>
    <string name="text_menu_options">More options</string>
    <string name="text_asteroid_detail">Asteroid Detail</string>

    <!-- Filter Asteroid string-->
    <string name="text_filter_week">View week asteroids</string>
    <string name="text_filter_today">View today asteroids</string>
    <string name="text_filter_saved">View saved asteroids</string>

    <!-- Main Screen string-->
    <string name="text_empty_picture_of_today">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="text_format_nasa_picture_of_day">NASA\'s picture of day: %s</string>
    <string name="text_description_loading_image">Loading image</string>
    <string name="text_description_error">Something went wrong. Please try again later.</string>

    <!-- Detail Screen string-->
    <string name="text_close_approach_date">Close approach date</string>
    <string name="text_absolute_magnitude">Absolute magnitude</string>
    <string name="text_estimated_diameter">Estimated diameter</string>
    <string name="text_relative_velocity">Relative velocity</string>
    <string name="text_distance_from_earth">Distance from earth</string>
    <string name="text_description_astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="text_description_potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="text_description_not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="text_astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="text_description_help_icon">Help Icon</string>
    <string name="text_potentially_hazardous">Potentially Hazardous</string>
    <string name="text_not_hazardous">Not Hazardous</string>
    <string name="text_hazardous_status_description">Hazard status indicator</string>

    <!-- Unit Format string-->
    <string name="text_format_astronomical_unit">%f au</string>
    <string name="text_format_km_unit">%f km</string>
    <string name="text_format_km_s_unit">%f km/s</string>
    <string name="no_data">No Data\n</string>

</resources>
