<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.api.models.AsteroidModel" />

        <variable
            name="detailFragment"
            type="com.udacity.asteroidradar.features.detail.DetailFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dim_default_margin">

            <ImageView
                android:id="@+id/activity_main_image_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/asteroid_safe" />

            <TextView
                android:id="@+id/close_approach_date_label_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_default_margin"
                android:layout_marginTop="@dimen/dim_default_margin"
                android:layout_marginEnd="@dimen/dim_default_margin"
                android:contentDescription="@string/text_close_approach_date"
                android:text="@string/text_close_approach_date"
                style="@style/InfoStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day" />

            <TextView
                android:id="@+id/close_approach_date_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4dp"
                android:contentDescription="@{asteroid.closeApproachDate}"
                android:text="@{asteroid.closeApproachDate}"
                style="@style/SubInfoStyle"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/close_approach_date_label_textView"
                tools:text="2020-02-01" />

            <TextView
                android:id="@+id/absolute_magnitude_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_default_margin"
                android:contentDescription="@string/text_absolute_magnitude"
                android:text="@string/text_absolute_magnitude"
                style="@style/InfoStyle"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/close_approach_date_textView" />

            <TextView
                android:id="@+id/absolute_magnitude_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4dp"
                style="@style/SubInfoStyle"
                app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/absolute_magnitude_title_textView"
                tools:text="25.126 au" />

            <ImageView
                android:id="@+id/help_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_description_astronomical_unit_explanation_button"
                android:onClick="@{() -> detailFragment.displayAstronomicalUnitExplanationDialog()}"
                android:padding="@dimen/dim_default_margin"
                app:layout_constraintBottom_toBottomOf="@+id/absolute_magnitude_textView"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toTopOf="@+id/absolute_magnitude_title_textView"
                app:srcCompat="@drawable/ic_help_circle" />

            <TextView
                android:id="@+id/estimated_diameter_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_default_margin"
                android:contentDescription="@string/text_estimated_diameter"
                android:text="@string/text_estimated_diameter"
                style="@style/InfoStyle"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/absolute_magnitude_textView" />

            <TextView
                android:id="@+id/estimated_diameter_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4dp"
                style="@style/SubInfoStyle"
                app:kmUnitText="@{asteroid.estimatedDiameter}"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/estimated_diameter_title_textView"
                tools:text="0.82 km" />

            <TextView
                android:id="@+id/relative_velocity_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_default_margin"
                android:contentDescription="@string/text_relative_velocity"
                android:text="@string/text_relative_velocity"
                style="@style/InfoStyle"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/estimated_diameter_textView" />

            <TextView
                android:id="@+id/relative_velocity_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4dp"
                style="@style/SubInfoStyle"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/relative_velocity_title_textView"
                app:velocityText="@{asteroid.relativeVelocity}"
                tools:text="11.9 km/s" />

            <TextView
                android:id="@+id/distance_from_earth_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_default_margin"
                android:contentDescription="@string/text_distance_from_earth"
                android:text="@string/text_distance_from_earth"
                style="@style/InfoStyle"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/relative_velocity_textView" />

            <TextView
                android:id="@+id/distance_from_earth_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4dp"
                style="@style/SubInfoStyle"
                app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/distance_from_earth_title_textView"
                tools:text="0.0924 au" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>